Fix admin server manage boxes misalignment when suspending a server (#5461)

--- a/public/themes/reviactyl/css/pterodactyl.css
+++ b/public/themes/reviactyl/css/pterodactyl.css
@@ -614,3 +614,33 @@ a:hover {
 .small-box .icon {
     color: #cad1d8;
 }
+
+.bg-gray {
+    background-color: #33404d !important;
+}
+
+pre {
+    color: #cad1d8;
+    background-color: #515f6cbb;
+    border-color: #1f2933;
+}
+
+/* Make the row a flex container so all columns in the same row can have equal height */
+.equal-height {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.equal-height>[class*="col-"] {
+    display: flex;
+}
+
+.equal-height .box {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.equal-height .box-body {
+    flex: 1;
+}
